Añadido el footer a cartelera.

--- a/cartelera/cartelera.css
+++ b/cartelera/cartelera.css
@@ -40,3 +40,8 @@ a:hover{
     font-size: larger;
     font-style: oblique;
 }
+footer{
+    font-size: small;
+    text-align: center;
+    color: whitesmoke;
+}
