--- a/horario/horario.css
+++ b/horario/horario.css
@@ -23,7 +23,7 @@ li{
     display: inline;
 }
 form{
-    
+    margin-bottom: 10px;
     margin-top: 10px;
     text-align: center;
 }
@@ -57,8 +57,7 @@ footer{
         -webkit-transform-origin: center;
         -moz-transform-origin: center;
 }
-
-    @keyframes jello {
+@keyframes jello {
         from,11.1%,to {transform: translate3d(0, 0, 0);}
         22.2% {transform: skewX(-12.5deg) skewY(-12.5deg);}
         33.3% {transform: skewX(6.25deg) skewY(6.25deg);}
@@ -67,4 +66,19 @@ footer{
         66.6% {transform: skewX(-0.78125deg) skewY(-0.78125deg);}
         77.7% {transform: skewX(0.390625deg) skewY(0.390625deg);}
         88.8% {transform: skewX(-0.1953125deg) skewY(-0.1953125deg);}
-    }
+}
+table{
+    margin: auto;
+    height: 500px;
+    width: 75%;
+    border: solid 2px;
+    border-radius: 5%;
+    background-color: lightgray;
+}
+td{
+    text-align: center;
+}
+th{
+    text-decoration: underline;
+}
+tr:hover {background-color: #ddd;}
